# chearshen-local-llm

./: .gitignore  README.md  check_backend.bat  mcp_config.json  package.json  setup.bat  setup.sh  start.bat  start_backend.bat
backend/: grpc_server.py  main.py  mcp_server.py  requirements.txt  rest_api.py  server.py
backend/agents/: __init__.py  action_planner.py  llm_agent.py  summarization_agent.py  transcription_agent.py
backend/services/: chat_orchestrator.py
backend/utils/: pdf_generator.py  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: grpc_client.rs  main.rs
frontend/src/components/: ChatInterface.tsx  VideoUpload.tsx
frontend/src/services/: grpcClient.ts
proto/: ai_service.proto  video_analyzer.proto
