[package]
name = "ai-video-analyzer"
version = "0.0.1"
description = "AI Video Analyzer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
tonic-build = "0.11"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["dialog-open", "dialog-save", "fs-all", "http-all", "path-all", "shell-open"] }
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "fs"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
async-stream = "0.3"
tokio-stream = "0.1"
once_cell = "1.18"
futures-util = "0.3"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
